# MusicHandler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/: PCH.h  musicHandler.h
package/: musicHandler.json
src/: main.cpp  musicHandler.cpp
